# bo_rag_prep_tool

./: .gitignore  README.md  prepare.py  pyproject.toml
.github/workflows/: CI.yml
resource/: four_truth_embeddings.json
src/bo_rag_prep_tool/: context.py  embedding.py  llm.py  prepare.py
tests/: test_example.py
tests/prepare/: test_prepare.py
tests/prepare/data/: expected_output.json
tests/prepare/data/I46409446.opf/: meta.yml
tests/prepare/data/I46409446.opf/base/: I1PD108815.txt  I1PD108816.txt
tests/prepare/data/I46409446.opf/layers/I1PD108815/: Pagination.yml
tests/prepare/data/I46409446.opf/layers/I1PD108816/: Pagination.yml
